# bubvol

./: .gitignore  bubvol.py
analize/: a.ipynb
analize/data/: 13-0.3.csv  13-0.5.csv  13-0.7.csv  13-0.8.csv  13-0.9.csv  13-1.0.csv  13-1.1.csv  13-1.2.csv  13-1.3.csv  13-1.4.csv  13-1.5.csv  13-2.0.csv  135-0.7.csv  135-0.8.csv  135-0.9.csv  135-1.0.csv  135-1.1.csv  135-1.2.csv  135-1.3.csv  135-1.4.csv  135-1.5.csv  138-0.7.csv  138-0.8.csv  138-0.9.csv  138-1.0.csv  138-1.1.csv  138-1.2.csv  138-1.3.csv  138-1.4.csv  138-1.5.csv  141-0.7.csv  141-0.8.csv  141-0.9.csv  141-1.0.csv  141-1.1.csv  141-1.2.csv  141-1.3.csv  141-1.4.csv  141-1.5.csv  16-0.3.csv  (+140 more)
deprecated/python/: delete.py
deprecated/src/: meson.build
deprecated/vega/: bv.sh
python/: delete.py  main.py
src/: add-path.sh  computevolume.vala  meson.build  meson.options
vega/: main.py  ov.py  script.lmp
